tests/algorithms/x/Clojure/project_euler/problem_023/sol1.out
Syntax error (UnsupportedOperationException) compiling recur at (/workspace/mochi/tests/algorithms/x/Clojure/project_euler/problem_023/sol1.clj:65:1792).
Can only recur from tail position

Full report at:
/tmp/clojure-12570900470947686659.edn